fix: wrap footer

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,6 +69,7 @@ footer {
 
     .list-collection {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
         align-items: center;
         justify-content: space-evenly;
